--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'org.jetbrains.kotlin.kapt'
     id 'dagger.hilt.android.plugin'
     id 'kotlin-parcelize'
+    id 'com.google.devtools.ksp' version '1.9.10-1.0.13'
 }
 
 android {
@@ -48,6 +49,13 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    applicationVariants.all { variant ->
+        kotlin.sourceSets {
+            getByName(variant.name) {
+                kotlin.srcDir("build/generated/ksp/${variant.name}/kotlin")
+            }
+        }
+    }
 }
 
 dependencies {
@@ -80,6 +88,11 @@ dependencies {
 
     // 3rd Party Library
     implementation "io.coil-kt:coil-compose:2.4.0"
+
+    // Navigation Screens
+    implementation 'io.github.raamcosta.compose-destinations:core:1.8.42-beta'
+    ksp 'io.github.raamcosta.compose-destinations:ksp:1.8.42-beta'
+
 }
 
 kapt {
